# bignbit

./: .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  README.md  build-lambda-zip.sh  conda-environment.yaml  pyproject.toml
.github/: pull_request_template.md
bignbit/: apply_opera_hls_treatment.py  apply_opera_treatment.py  build_image_sets.py  copy_harmony_output_to_s3.py  copy_harmony_results_to_s3.py  generate_image_metadata.py  get_collection_concept_id.py  get_dataset_configuration.py  get_granule_umm_json.py  get_harmony_job_status.py  granule_report.py  handle_big_result.py  handle_gitc_response.py  identify_image_file.py  image_set.py  process_harmony_results.py  save_cma_message.py  save_cnm_message.py  send_to_gitc.py  submit_harmony_job.py  utils.py
docker/: Dockerfile  build-docker.sh
examples/: README.md
scripts/: CONFIGURATION.md  create-tf-asset-file.sh  create_dataset_config.py  get-img-tag.sh  get-tf-asset-filename.sh  performance_test.py  set-secrets-file-for-cumulus-env.sh
terraform/: .terraform.lock.hcl  lambda_functions.tf  main.tf  outputs.tf  s3.tf  sqs_sns.tf  state_machine_definition.json  state_machine_definition.tpl  step.tf  step_data.tf  variables.tf
terraform_deploy/: big.tf  main.tf
tests/: conftest.py  mock_gitc.py  performance_test.py  test_apply_opera_hls_treatment.py  test_apply_opera_treatment.py  test_build_image_sets.py  test_format_iso_expiration_date.py  test_generate_image_metadata.py  test_get_collection_concept_id.py  test_get_harmony_client.py  test_get_harmony_job_status.py  test_handle_big_result.py  (+7 more)
(+45 files in other folders)
