[tool.poetry]
name = "bignbit"
version = "0.2.0a8"
description = "Browse image generation and transfer"
authors = ["PO.DAAC <podaac@jpl.nasa.gov>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.18"
cumulus-message-adapter-python = "^2.1.0"
harmony-py = "^0.4.3"
cumulus-process = "^1.3.0"
python-graphql-client = "^0.4.3"
requests = "^2.28.2"
gdal = "3.6.3"
importlib-resources = "^5.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
moto = "^4.1.2"
pylint = "^2.15.8"
flake8 = "^6.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
